Added more content for reccomendation page and button (doesnt do anything yet) for new rec

--- a/recommendation.html
+++ b/recommendation.html
@@ -16,9 +16,27 @@
     </div>
 </nav>
 <body>
-    <h2>Current Book</h2>
+    <h2>Book Reccomendation</h2>
+    <table>
+        <tr>
+            <th>Title:</th>
+            <td>The Blade Itself</td>
+        </tr>
+        <tr>
+            <th>Author:</th>
+            <td>Joe Abercrombie</td>
+        </tr>
+        <tr>
+            <th>Series:</th>
+            <td>First Law</td>
+        </tr>
+        <tr>
+            <th>Genre:</th>
+            <td>Fantasy</td>
+        </tr>
+    </table>
     <p>
-    I am currently reading the "Cradle" series by will wight. It is a fantasy series that ...
+    I would reccomend the "First Law" series by Joe Abercrombie...
     </p>
     <img src="firstlaw.jpg" alt="Picture of The Book">
     <table>
@@ -33,6 +51,7 @@
     </table>
     <h2>Rating</h2>
     <p>I would give this series a 5 out of 5 stars</p>
+    <button>New Recommendation</button>
 </body>
 
 
