--- a/recommendation.html
+++ b/recommendation.html
@@ -12,7 +12,7 @@
         <a href="current.html">Current Book</a>
     </div>
     <div>
-        <a href="reccomendation.html">Home</a>
+        <a href="reccomendation.html">Book Recommendation</a>
     </div>
 </nav>
 <body>
