Commit for milestone 2 with initial implementation of wow feature, as well as css

--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
-<html>
-
-<header>
+<!DOCTYPE html>
+<html lang="en">
+<HEAD>
+    <meta charset="UTF-8">
+    <LINK rel="stylesheet" href="style.css">
     <title>iws-p1</title>
-    <h1>Books!</h1>
-</header>
-<nav>
-    <div>
-        <a href="index.html">Home</a>
-    </div>
-    <div>
-        <a href="current.html">Current Book</a>
-    </div>
-    <div>
-        <a href="recommendation.html">Book Recommendation</a>
-    </div>
-</nav>
+</HEAD>
 <body>
+    <header>
+        <h1>Books!</h1>
+        <nav>
+            <div>
+                <a href="index.html">Home</a>
+            </div>
+            <div>
+                <a href="current.html">Current Book</a>
+            </div>
+            <div>
+                <a href="recommendation.html">Book Recommendation</a>
+            </div>
+        </nav>
+    </header>
+    <main>
     <h2>About Me</h2>
     <p>
-        My name is Matthew and I like to read books. I primarily read fantasy and science fiction. Some of my favorite authors are....
+        My name is Matthew and I like to read books. I primarily read fantasy and science fiction. Some of my favorite authors are Joe Abercrombie, Brandon Sanderson, Peter V. Brett.
+        I really like it when books have a strongly defined magic system.
+        Usualy I enjoy long series over standalone books, as they allow for more character development and world building.
     </p>
-    <img src="profile.jpg" alt="Picture of Me">
+    <img src="images/profile.jpg" alt="Picture of Me">
+    </main>
+    <footer>
+        <p>Matthew's Book Site</p>
+    </footer>
 </body>
 
 
