--- a/current.html
+++ b/current.html
@@ -1,26 +1,31 @@
-<html>
-
-<header>
+<!DOCTYPE html>
+<html lang="en">
+<HEAD>
+    <meta charset="UTF-8">
+    <LINK rel="stylesheet" href="style.css">
     <title>iws-p1</title>
-    <h1>Books!</h1>
-</header>
-<nav>
-    <div>
-        <a href="index.html">Home</a>
-    </div>
-    <div>
-        <a href="current.html">Current Book</a>
-    </div>
-    <div>
-        <a href="recommendation.html">Book Recommendation</a>
-    </div>
-</nav>
+</HEAD>
 <body>
+    <header>
+        <h1>Books!</h1>
+        <nav>
+            <div>
+                <a href="index.html">Home</a>
+            </div>
+            <div>
+                <a href="current.html">Current Book</a>
+            </div>
+            <div>
+                <a href="recommendation.html">Book Recommendation</a>
+            </div>
+        </nav>
+    </header>
+    <main>
     <h2>Current Book</h2>
     <p>
-    I am currently reading the "Cradle" series by will wight. It is a fantasy series that ...
+    I am currently reading the "Cradle" series by will wight. It is a fantasy series in which the main character is trying to advance through different levels of power. He begins much weaker than most people, but does a lot of training.
     </p>
-    <img src="cradle.jpg" alt="Picture of The Book">
+    <img src="images/cradle.jpg" alt="Picture of The Book">
     <table>
         <tr>
             <th>Pros</th>
@@ -30,9 +35,17 @@
             <td>Good world building</td>
             <td>Some cliches</td>
         </tr>
+         <tr>
+            <td>Interesting Magic System</td>
+            <td>Slow start</td>
+        </tr>
     </table>
     <h2>Rating so far</h2>
     <p>I would give this series a 4 out of 5 stars</p>
+    </main>
+    <footer>
+    <p>Matthew's Book Site</p>
+    </footer>
 </body>
 
 
