--- a/recommendation.html
+++ b/recommendation.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<HEAD>
+<head>
     <meta charset="UTF-8">
     <LINK rel="stylesheet" href="style.css">
     <title>iws-p1</title>
-</HEAD>
+</head>
 
 <body>
     <header>
