Added the missing content

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         My name is Matthew and I like to read books. I primarily read fantasy and science fiction. Some of my favorite authors are Joe Abercrombie, Brandon Sanderson, Peter V. Brett.
         I really like it when books have a strongly defined magic system.
         Usualy I enjoy long series over standalone books, as they allow for more character development and world building.
+        Outside of reading, my favorite hobby is rock climbing.
     </p>
-    <img src="images/profile.jpg" alt="Picture of Me">
+    <img src="images/profile.jpg" alt="Picture of Me Rock Climbing">
     </main>
     <footer>
         <p>Matthew's Book Site</p>
