--- a/recommendation.html
+++ b/recommendation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <LINK rel="stylesheet" href="style.css">
-    <title>iws-p1</title>
+    <title>Matthew's Book Site</title>
 </head>
 
 <body>
